--- a/css/style.css
+++ b/css/style.css
@@ -36,25 +36,36 @@
 	text-align: center;
 
 }
-.more-bttn{
+
+
+#vidBtn {
 	font-size:14px;
 	color: #fff;
 	font-weight: 600;
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 2px;
 	background:#ff4f81;
-	padding-top: 0;
-	padding-bottom: 0;
-	padding-left: 5px;
-	padding-right: 5px;
-
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 10px 30px;
+    border: none;
+    cursor: pointer;
+    margin-top: 18px;
+    border-radius: 30px;
+    animation: shadow-pulse 2s infinite;
 }
-.more-bttn:hover{
-	color: #000;
-	background: #fff;
-
+@keyframes shadow-pulse {
+    0% {
+        box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.7);
+    }
+    100% {
+        box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+    }
 }
+
+
+
+
 
 /*------------navigation------------*/
 .nav-bar{
@@ -119,17 +130,21 @@
 .lecture h1{
 	color: #fff;
 	letter-spacing: 5px;
-	padding: 20px 0px 0px;
+	padding: 20px 20px 0px;
 	text-align: center;
 }
 .box{
-	height: 360px;
+	height: 420px;
 	background-color: grey;
 	overflow-x: scroll;
 	overflow-y: hidden;
 	white-space: nowrap;
+	margin-bottom: 20px;
+
 }
 .l-img{
+	margin-bottom: 20px;
+	padding-bottom: 20px;
 	display: inline-block;
 	height: 100%;
 	width: 320px;
@@ -143,8 +158,7 @@
 
 .l-img{
 	text-align: center;
-	border: 1px solid #000;
-	padding: 5px 5px 0px 5px;
+	border: 3px solid #ff4f81;
 	background-color: grey;
 }
 .l-info p{
@@ -152,6 +166,7 @@
 	letter-spacing: 2px;
 	color: #fff;
 	text-align: center;
+
 }
 .l-info h5{
 	font-size: 20px;
@@ -160,8 +175,36 @@
 	text-align: center;
 }
 
+.lecture2{
+	background-color: grey;
+	padding-bottom: 20px;
+}
 
+.lecture2 h1{
+	color: #fff;
+	letter-spacing: 5px;
+	padding: 20px 20px 0px;
+	text-align: center;
+}
+.lecture2 .l-img{
+	text-align: center;
+	border: 3px solid #ff4f81;
+	background-color: rgba(0,0,0,0.4);
+	
+}
+.lecture2 .l-info p{
+	font-size: 20px;
+	letter-spacing: 2px;
+	color: #fff;
+	text-align: center;
 
+}
+.lecture2 .l-info h5{
+	font-size: 20px;
+	letter-spacing: 1.5px;
+	color: #fff;
+	text-align: center;
+}
 
 
 
