--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@
 
 }
 
-
 #vidBtn {
 	font-size:14px;
 	color: #fff;
@@ -62,9 +61,6 @@
         box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
     }
 }
-
-
-
 
 
 /*------------navigation------------*/
@@ -113,16 +109,6 @@
 
 }
 
-
-
-
-
-
-
-
-
-
-
 .lecture{
 	background-color: #000;
 	padding-bottom: 20px;
@@ -134,32 +120,31 @@
 	text-align: center;
 }
 .box{
-	height: 420px;
-	background-color: grey;
+	height: 440px;
 	overflow-x: scroll;
 	overflow-y: hidden;
 	white-space: nowrap;
 	margin-bottom: 20px;
-
 }
 .l-img{
 	margin-bottom: 20px;
 	padding-bottom: 20px;
 	display: inline-block;
 	height: 100%;
-	width: 320px;
-	
-	
-}
-.l-img img{
-	width: 100%;
-}
-
-
-.l-img{
+	width: 300px;
 	text-align: center;
 	border: 3px solid #ff4f81;
 	background-color: grey;
+	border-radius: 20px;	
+}
+.l-img img{
+	width: 100%;
+	height: 270px;
+	border-radius: 20px;
+}
+
+.l-img{
+	
 }
 .l-info p{
 	font-size: 20px;
@@ -205,8 +190,6 @@
 	color: #fff;
 	text-align: center;
 }
-
-
 
 footer{
 	background-color: #000;
@@ -341,7 +324,6 @@ footer{
 	line-height: 53px;
 	height: 54px;
 	width: 54px;
-
 }
 
 }
@@ -388,15 +370,3 @@ footer{
 
 }
 }
-
-
-
-
-
-
-
-
-
-
-
-
